correction alignement menu

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,8 @@ header {
   grid-template-columns: auto 1fr auto;
   grid-template-areas:
     "photo titre buttons";
+
+  align-items: center;
 }
 
 #photo {
@@ -134,7 +136,6 @@ header {
 
 /* Barre de navigation */
 #menu {
-  /* display: none; */
   position: absolute;
   background-color: var(--menu-bg-color);
   box-shadow: 15px 15px 15px var(--section-shadow-color);
@@ -196,7 +197,7 @@ footer {
   text-align: center;
 }
 
-@media screen and (min-width: 574px) {
+@media screen and (min-width: 820px) {
 
   /* Header */
   header {
@@ -213,18 +214,20 @@ footer {
   /* Barre de navigation */
   #menu {
     grid-area: menu;
-    /* display: block; */
     position: relative;
     top: auto;
     right: auto;
 
     background-color: rgba(0, 0, 0, 0);
     box-shadow: none;
+
+    display: flex;
+    justify-content: center;
   }
 
   #menu ul {
-    margin: auto;
-    padding: 1em;
+    margin: 0;
+    padding: 1em 0;
 
     display: flex;
     flex-direction: row;
@@ -243,7 +246,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1150px) {
 
   /* Header */
   header {
